used sticky-top footer for some pages to fix the fixed-footer covering content

--- a/public/Content/full.css
+++ b/public/Content/full.css
@@ -69,15 +69,6 @@ body {
     background-color: #333;
 }
 
-.footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    color: black;
-    text-align: center;
-
-}
-
 .home_container {
     height: 100vh;
     width: 100%;
